--- a/_data/phd-alumni.yaml
+++ b/_data/phd-alumni.yaml
@@ -632,12 +632,13 @@
   year: 2001
   title: Betti numbers, Grobner bases and syzygies for cerain affine monomial curves
   advisor: Dilip P. Patil
+  present: Associate Professor, IIT Gandhinagar
 
 - name: Nandini Nilakantan
   year: 2001
   title: Two dimensional weak pseudomanifolds with few vertices
   advisor: Basudeb Datta
-  present: Associate Professor, IIT Kanpur
+  present: Professor, IIT Kanpur
 
 - name: Nirmalendu Chaudhuri
   year: 2001
@@ -783,7 +784,7 @@
 - name: Dheeraj D. Kulkarni
   year: 2012
   title: Relative symplectic caps, 4 genus and fibered knots
-  advisor: S. Gadgil
+  advisor: Siddhartha Gadgil
   present: Assistant Professor, IISER Bhopal
 
 - name: Dinesh K. Keshari
@@ -866,7 +867,7 @@
 - name: Divakaran D.
   year: 2014
   title: Compactness theorems for the spaces of distance measure spaces and Riemann surface laminations
-  advisor: S. Gadgil
+  advisor: Siddhartha Gadgil
 
 - name: Avijit Pal
   year: 2014
@@ -891,7 +892,8 @@
 - name: T. V. H. Prathamesh
   year: 2015
   title: Mechanising Knot theory
-  advisor: S. Gadgil
+  advisor: Siddhartha Gadgil
+  present: Assistant Professor, KREA University
 
 - name: Sayan Bagchi
   year: 2015
@@ -901,14 +903,14 @@
 - name: Bidyut Sanki
   year: 2015
   title: Shortest length geodesics on closed hyperbolic surfaces
-  advisor: S. Gadgil
-  present: IMSc, Chennai
+  advisor: Siddhartha Gadgil
+  present: Assistant Professor, IIT Kanpur
 
 - name: Biplab Basak
   year: 2015
   title: Minimal crystallizations of 3- and 4-manifolds
   advisor: Basudeb Datta
-  present: SERB Indo-US Research Fellow, Cornell University, USA.
+  present: Assistant Professor, IIT Delhi.
 
 - name: Rajeev Gupta
   year: 2015
