--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -137,7 +137,7 @@
   year-of-joining: 2014
   programme: Integrated PhD
   image: true
-  guide: T. Bhattacharyya 
+  guide: Tirthankar Bhattacharyya 
   scholarship: IISc
 
 
@@ -256,7 +256,7 @@
   user-id	:	poornenduk
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: Srikanth K. Iyer
+  guide: Tirthankar Bhattacharyya
   scholarship: IISc
   image: true
 
@@ -272,7 +272,7 @@
   user-id	:	shubhamr
   year-of-joining: 2016
   programme: Integrated PhD
-  guide: T. Bhattacharyya
+  guide: Tirthankar Bhattacharyya
   scholarship: IISc
 
 
