--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -127,6 +127,7 @@
   position: Professor
   research-areas: Number Theory, Arithmetic Geometry
   phd: Cambridge, UK
+  office: X26
   author-name: "Kakde, Mahesh"
 
 - name: Apoorva Khare
