--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -232,7 +232,7 @@ aug2019:
     code: MA 395
     prereq-courses: ''
     ug-prereq-courses: ''
-    venue: LH-1/LH-3
+    venue: LH-4
   - name: Large Deviations
     code: MA 396
     instructor: Anirban Basak
