--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -14569,7 +14569,7 @@
   year: 2018
   url: 'http://www.mat.univie.ac.at/~slc/wpapers/FPSAC2018/29-Khare.html'
 
-- author: Khare, Apoorva and Tao, Terence.
+- author: Khare, Apoorva and Tao, Terence
   title: Schur polynomials, entrywise positivity preservers, and weak majorization.
   fjournal: "Séminaire Lotharingien de Combinatoire"
   journal: "S&eacute;m. Lothar. Combin."
