--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -110,6 +110,7 @@
   phone-ext: 3330
   office: X06
   author-name: Gupta, Subhojoy
+  website: https://sites.google.com/view/subhojoy/home
 
 - name: Srikanth K. Iyer
   user-id: skiyer
