--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -179,6 +179,20 @@
   mrclass: '32A17 (30E05 30J10 32F45 46E20)'
   volume: '63'
 
+- number: '2'
+  author: 'Roth, Julien and Upadhyay, Abhitosh'
+  fjournal: 'Archiv der Mathematik'
+  url: 'https://doi.org/10.1007/s00013-019-01315-8'
+  pages: '213-224'
+  year: '2019'
+  title: 'On compact anisotropic Weingarten hypersurfaces in Euclidean space'
+  doi: '10.1007/s00013-019-01315-8'
+  issn: '0003-889X'
+  journal: 'Arch. Math. (Basel)'
+  mrnumber: '3977514'
+  mrclass: '53A10 (49Q10 53A07)'
+  volume: '113'
+
 - number: '1'
   author: 'Gadgil, Siddhartha'
   fjournal: 'Journal of Mathematical Biology'
@@ -198,7 +212,7 @@
   fjournal: 'Computational and Applied Mathematics'
   pages: '355-368, 371-372'
   year: '1999'
-  mrreviewer: 'Sa\~A$&oslash;verline$d Hamadene'
+  mrreviewer: 'Sa\~A$\overline$d Hamadene'
   title: 'Nonzero-sum stochastic differential games with reflecting diffusions'
   issn: '0101-8205'
   journal: 'Comput. Appl. Math.'
@@ -230,7 +244,7 @@
   publisher: 'Bhaskaracharya Pratishthana, Pune'
 
 - number: '1'
-  author: 'Bharali, Gautam and Stens&oslash; nes, Berit'
+  author: 'Bharali, Gautam and Stens&oslash;nes, Berit'
   fjournal: 'Mathematische Zeitschrift'
   url: 'http://dx.doi.org/10.1007/s00209-008-0312-y'
   pages: '39-63'
@@ -626,6 +640,18 @@
   mrnumber: '2596052'
   mrclass: '42B10 (22E30 43A05)'
   volume: '138'
+
+- number: '1'
+  author: 'Misra, Gadadhar and Pal, Avijit and Varughese, Cherian'
+  fjournal: 'Journal of Operator Theory'
+  pages: '23-47'
+  year: '2019'
+  title: 'Contractivity and complete contractivity for finite dimensional Banach spaces'
+  issn: '0379-4024'
+  journal: 'J. Operator Theory'
+  mrnumber: '3979938'
+  mrclass: '47L07 (47L25)'
+  volume: '82'
 
 - number: '2'
   author: 'Barua, Rana and Roy, Suman and Chaochen, Zhou'
@@ -2651,7 +2677,7 @@
   url: 'http://dx.doi.org/10.1287/moor.1120.0542'
   pages: '437-449'
   year: '2012'
-  mrreviewer: 'Sa\~A$&oslash;verline$d Hamadene'
+  mrreviewer: 'Sa\~A$\overline$d Hamadene'
   title: 'Zero-sum risk-sensitive stochastic differential games'
   doi: '10.1287/moor.1120.0542'
   issn: '0364-765X'
@@ -2889,20 +2915,6 @@
   mrclass: '47A45 (47A13)'
   volume: '53'
 
-- number: '6'
-  author: 'Jha, Anuradha and Kadalbajoo, Mohan K.'
-  fjournal: 'International Journal of Computer Mathematics'
-  url: 'https://doi.org/10.1080/00207160.2014.928701'
-  pages: '1204-1221'
-  year: '2015'
-  title: 'A robust layer adapted difference method for singularly perturbed two-parameter parabolic problems'
-  doi: '10.1080/00207160.2014.928701'
-  issn: '0020-7160'
-  journal: 'Int. J. Comput. Math.'
-  mrnumber: '3317087'
-  mrclass: '65M06 (65M12 65M50)'
-  volume: '92'
-
 - author: 'Banerjee, Abhishek'
   fjournal: 'Journal of Algebra'
   url: 'http://dx.doi.org/10.1016/j.jalgebra.2014.10.012'
@@ -2946,6 +2958,20 @@
   mrnumber: '3353268'
   mrclass: '11F30 (11F03 11F50)'
   volume: '169'
+
+- number: '1-2'
+  author: 'Gupta, Subhojoy and Wolf, Michael'
+  fjournal: 'Mathematische Annalen'
+  url: 'https://doi.org/10.1007/s00208-018-1674-z'
+  pages: '73-118'
+  year: '2019'
+  title: 'Meromorphic quadratic differentials and measured foliations on a Riemann surface'
+  doi: '10.1007/s00208-018-1674-z'
+  issn: '0025-5831'
+  journal: 'Math. Ann.'
+  mrnumber: '3968867'
+  mrclass: '32G15 (30F30 37F75 53C12)'
+  volume: '373'
 
 - number: '2'
   author: 'Rao, R. Vittal and Sukavanam, N.'
@@ -3183,6 +3209,34 @@
   mrclass: '42C10 (26A33 33C45 42B20 42B35 43A90 47G40)'
   volume: '178'
 
+- number: '6'
+  author: 'Jha, Anuradha and Kadalbajoo, Mohan K.'
+  fjournal: 'International Journal of Computer Mathematics'
+  url: 'https://doi.org/10.1080/00207160.2014.928701'
+  pages: '1204-1221'
+  year: '2015'
+  title: 'A robust layer adapted difference method for singularly perturbed two-parameter parabolic problems'
+  doi: '10.1080/00207160.2014.928701'
+  issn: '0020-7160'
+  journal: 'Int. J. Comput. Math.'
+  mrnumber: '3317087'
+  mrclass: '65M06 (65M12 65M50)'
+  volume: '92'
+
+- number: '3'
+  author: 'Das, Soumya and Pal, Ritwik'
+  fjournal: 'Research in Number Theory'
+  url: 'https://doi.org/10.1007/s40993-019-0158-x'
+  pages: 'Art. 20, 9'
+  year: '2019'
+  title: 'The first negative eigenvalue of Yoshida lifts'
+  doi: '10.1007/s40993-019-0158-x'
+  issn: '2363-9555'
+  journal: 'Res. Number Theory'
+  mrnumber: '3974676'
+  mrclass: '11F46 (11F66)'
+  volume: '5'
+
 - number: '2-3'
   author: 'Rangarajan, Govindan'
   fjournal: 'Physics Letters. A'
@@ -3225,6 +3279,20 @@
   mrnumber: '1233999'
   mrclass: '93E20 (49L20 60J60 60J75)'
   volume: '31'
+
+- number: '2'
+  author: 'Sain, Debmalya and Paul, Kallol and Mandal, Kalidas'
+  fjournal: 'Operators and Matrices'
+  url: 'https://doi.org/10.7153/oam-2019-13-31'
+  pages: '421-432'
+  year: '2019'
+  title: 'On two extremum problems related to the norm of a bounded linear operator'
+  doi: '10.7153/oam-2019-13-31'
+  issn: '1846-3886'
+  journal: 'Oper. Matrices'
+  mrnumber: '3980451'
+  mrclass: '47L05 (46B20 46C15)'
+  volume: '13'
 
 - number: '4'
   author: 'Gadgil, Siddhartha'
@@ -4904,6 +4972,20 @@
   mrclass: '45E05 (30E20)'
   volume: '77'
 
+- number: '8'
+  author: 'Balakumar, G. P. and Borah, Diganta and Mahajan, Prachi and Verma, Kaushal'
+  fjournal: 'Proceedings of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/proc/14421'
+  pages: '3401-3411'
+  year: '2019'
+  title: 'Remarks on the higher dimensional Suita conjecture'
+  doi: '10.1090/proc/14421'
+  issn: '0002-9939'
+  journal: 'Proc. Amer. Math. Soc.'
+  mrnumber: '3981118'
+  mrclass: '32F45 (32A07 32A25)'
+  volume: '147'
+
 - url: 'https://doi.org/10.1017/9781108236843'
   mrnumber: '3791453'
   pages: 'xviii+328'
@@ -5176,6 +5258,20 @@
   mrnumber: '3333108'
   mrclass: '53C21 (53C20 53C25)'
   volume: '40'
+
+- number: '5'
+  author: 'Benedetti, Carolina and Gonz&aacute;lez D&#39;Le&oacute;n, Rafael S. and Hanusa, Christopher R. H. and Harris, Pamela E. and Khare, Apoorva and Morales, Alejandro H. and Yip, Martha'
+  fjournal: 'Transactions of the American Mathematical Society'
+  url: 'https://doi.org/10.1090/tran/7743'
+  pages: '3369-3404'
+  year: '2019'
+  title: 'A combinatorial model for computing volumes of flow polytopes'
+  doi: '10.1090/tran/7743'
+  issn: '0002-9947'
+  journal: 'Trans. Amer. Math. Soc.'
+  mrnumber: '3988614'
+  mrclass: '05A15 (05A19 05C20 05C21 52A38 52B05 52B11)'
+  volume: '372'
 
 - number: '1'
   author: 'Mal, Arpita and Sain, Debmalya and Paul, Kallol'
@@ -7582,6 +7678,31 @@
   mrreviewer: 'Ian Kiming'
   publisher: 'Birkh&auml;user, Basel'
 
+- url: 'https://doi.org/10.1090/conm/732/14793'
+  mrnumber: '3973284'
+  pages: '91-99'
+  year: '2019'
+  publisher: 'Amer. Math. Soc., Providence, RI'
+  booktitle: 'Automorphic forms and related topics'
+  title: 'Differential operators on Jacobi forms and special values of certain Dirichlet series'
+  doi: '10.1090/conm/732/14793'
+  author: 'Jha, Abhash Kumar and Sahu, Brundaban'
+  series: 'Contemp. Math.'
+  mrclass: '11F50 (11F25 11F66)'
+  volume: '732'
+
+- number: '1-2'
+  author: 'Khan, Mohammad Yasir Feroz and Biswas, Rahul and Sau, Ramesh Chandra'
+  fjournal: 'The Mathematics Student'
+  pages: '153-158'
+  year: '2019'
+  title: 'Instability of Lagrange interpolation on $H^1(\Omega)&ccedil;ap C(\overline\Omega)$'
+  issn: '0025-5742'
+  journal: 'Math. Student'
+  mrnumber: '3930712'
+  mrclass: '47A67'
+  volume: '88'
+
 - number: '1'
   author: 'Basak, Gopal K. and Bisi, Arnab and Ghosh, Mrinal K.'
   fjournal: 'Journal of Mathematical Analysis and Applications'
@@ -9749,20 +9870,6 @@
   mrclass: '37F45'
   volume: '121'
 
-- number: '15'
-  author: 'Rangarajan, Govindan'
-  fjournal: 'Journal of Physics. A. Mathematical and General'
-  url: 'http://dx.doi.org/10.1088/0305-4470/31/15/024'
-  pages: '3649-3658'
-  year: '1998'
-  title: 'Jolt factorization of pendulum map'
-  doi: '10.1088/0305-4470/31/15/024'
-  issn: '0305-4470'
-  journal: 'J. Phys. A'
-  mrnumber: '1626223'
-  mrclass: '70H05 (70-08)'
-  volume: '31'
-
 - number: '1'
   author: 'Raman, S. Ganapathi and Rao, R. Vittal'
   fjournal: 'Integral Equations and Operator Theory'
@@ -9807,6 +9914,20 @@
   mrclass: '45E99 (45P05)'
   volume: '57'
 
+- number: '5'
+  author: 'Bharali, Gautam and Chandel, Vikramjeet Singh'
+  fjournal: 'Complex Analysis and Operator Theory'
+  url: 'https://doi.org/10.1007/s11785-017-0701-5'
+  pages: '2069-2093'
+  year: '2019'
+  title: 'Pick interpolation on the polydisc: small families of sufficient kernels'
+  doi: '10.1007/s11785-017-0701-5'
+  issn: '1661-8254'
+  journal: 'Complex Anal. Oper. Theory'
+  mrnumber: '3979699'
+  mrclass: '32A25 (32A38 46E20 46J15)'
+  volume: '13'
+
 - number: '1'
   author: 'Ravindran, Renuka and Prasad, Phoolan'
   fjournal: 'The Quarterly Journal of Mechanics and Applied Mathematics'
@@ -9830,6 +9951,34 @@
   booktitle: 'Algorithms and theory of computation handbook'
   title: 'Integer programming'
   mrclass: '90C10'
+
+- number: '15'
+  author: 'Rangarajan, Govindan'
+  fjournal: 'Journal of Physics. A. Mathematical and General'
+  url: 'http://dx.doi.org/10.1088/0305-4470/31/15/024'
+  pages: '3649-3658'
+  year: '1998'
+  title: 'Jolt factorization of pendulum map'
+  doi: '10.1088/0305-4470/31/15/024'
+  issn: '0305-4470'
+  journal: 'J. Phys. A'
+  mrnumber: '1626223'
+  mrclass: '70H05 (70-08)'
+  volume: '31'
+
+- number: '2'
+  author: 'Misra, Gadadhar and Reza, Md. Ramiz'
+  fjournal: 'Illinois Journal of Mathematics'
+  url: 'https://doi.org/10.1215/00192082-7768711'
+  pages: '193-217'
+  year: '2019'
+  title: 'Curvature inequalities and extremal operators'
+  doi: '10.1215/00192082-7768711'
+  issn: '0019-2082'
+  journal: 'Illinois J. Math.'
+  mrnumber: '3987495'
+  mrclass: '32A99 (30C40 47A13 47A25)'
+  volume: '63'
 
 - number: '3'
   author: 'Chakrabarti, A. and Sahoo, T.'
@@ -11435,20 +11584,6 @@
   mrclass: '60F17 (60J60)'
   volume: '61'
 
-- author: 'Narayanan, E. K. and Pasquale, A. and Pusti, S.'
-  fjournal: 'Advances in Mathematics'
-  url: 'http://dx.doi.org/10.1016/j.aim.2013.10.027'
-  pages: '227-259'
-  year: '2014'
-  mrreviewer: 'Masatoshi Iida'
-  title: 'Asymptotics of Harish-Chandra expansions, bounded hypergeometric functions associated with root systems, and applications'
-  doi: '10.1016/j.aim.2013.10.027'
-  issn: '0001-8708'
-  journal: 'Adv. Math.'
-  mrnumber: '3144230'
-  mrclass: '33C67 (43A90)'
-  volume: '252'
-
 - number: '5'
   author: 'Ghosh, Mrinal K. and Kumar, K. Suresh and Pal, Chandan'
   fjournal: 'Stochastic Analysis and Applications'
@@ -11610,6 +11745,32 @@
   mrnumber: '1417760'
   mrclass: '76E99 (76E25)'
   volume: '81'
+
+- author: 'Narayanan, E. K. and Pasquale, A. and Pusti, S.'
+  fjournal: 'Advances in Mathematics'
+  url: 'http://dx.doi.org/10.1016/j.aim.2013.10.027'
+  pages: '227-259'
+  year: '2014'
+  mrreviewer: 'Masatoshi Iida'
+  title: 'Asymptotics of Harish-Chandra expansions, bounded hypergeometric functions associated with root systems, and applications'
+  doi: '10.1016/j.aim.2013.10.027'
+  issn: '0001-8708'
+  journal: 'Adv. Math.'
+  mrnumber: '3144230'
+  mrclass: '33C67 (43A90)'
+  volume: '252'
+
+- number: '1'
+  author: 'Ayyer, Arvind and Linusson, Svante'
+  fjournal: 'Random Structures \& Algorithms'
+  pages: '56-72'
+  year: '2019'
+  title: 'Reverse juggling processes'
+  issn: '1042-9832'
+  journal: 'Random Structures Algorithms'
+  mrnumber: '3974191'
+  mrclass: '60J10 (00A08 05A05)'
+  volume: '55'
 
 - number: '1'
   author: 'Anamby, Pramath and Das, Soumya'
@@ -11843,6 +12004,18 @@
   mrnumber: '2013069'
   mrclass: '45E99 (30E20 30E25 45H05)'
   volume: '16'
+
+- number: '2'
+  author: 'Jha, Abhash Kumar and Juyal, Abhishek and Pandey, Manish Kumar'
+  fjournal: 'Journal of the Ramanujan Mathematical Society'
+  pages: '245-252'
+  year: '2019'
+  title: 'On simultaneous non-vanishing of twisted $L$-functions associated to newforms on $\Gamma_0(N)$'
+  issn: '0970-1249'
+  journal: 'J. Ramanujan Math. Soc.'
+  mrnumber: '3962574'
+  mrclass: '11F67 (11F66)'
+  volume: '34'
 
 - author: 'B&ouml;cherer, Siegfried and Das, Soumya'
   fjournal: 'Advances in Mathematics'
@@ -13909,7 +14082,7 @@
   url: 'http://dx.doi.org/10.1080/07362990701420126'
   pages: '845-867'
   year: '2007'
-  mrreviewer: 'Sa\~A$&oslash;verline$d Hamadene'
+  mrreviewer: 'Sa\~A$\overline$d Hamadene'
   title: 'Stochastic differential games with multiple modes and applications to portfolio optimization'
   doi: '10.1080/07362990701420126'
   issn: '0736-2994'
@@ -14048,6 +14221,20 @@
   mrclass: '76B15'
   volume: '5'
 
+- number: '2'
+  author: 'Sain, Debmalya'
+  fjournal: 'Operators and Matrices'
+  url: 'https://doi.org/10.7153/oam-2019-13-32'
+  pages: '433-445'
+  year: '2019'
+  title: 'Smooth points in operator spaces and some Bishop-Phelps-Bollob&aacute;s type theorems in Banach spaces'
+  doi: '10.7153/oam-2019-13-32'
+  issn: '1846-3886'
+  journal: 'Oper. Matrices'
+  mrnumber: '3980452'
+  mrclass: '46B20 (46B04 47L05)'
+  volume: '13'
+
 - number: '4'
   author: 'Hazra, Somnath'
   fjournal: 'Complex Analysis and Operator Theory'
@@ -14076,20 +14263,6 @@
   mrnumber: '2387556'
   mrclass: '05C80 (60C05)'
   volume: '32'
-
-- number: '3'
-  author: 'Bose, Arup and Gangopadhyay, Sreela and Saha, Koushik'
-  fjournal: 'Random Matrices. Theory and Applications'
-  url: 'http://dx.doi.org/10.1142/S2010326313500068'
-  pages: '1350006, 21'
-  year: '2013'
-  title: 'Convergence of a class of Toeplitz type matrices'
-  doi: '10.1142/S2010326313500068'
-  issn: '2010-3263'
-  journal: 'Random Matrices Theory Appl.'
-  mrnumber: '3109423'
-  mrclass: '60B20'
-  volume: '2'
 
 - number: '8'
   author: 'Surma Devi, C. D. and Nagaraj, M. and Ramesan, T. and Nath, G.'
@@ -14265,6 +14438,32 @@
   issn: '1073-7928'
   journal: 'Int. Math. Res. Not. IMRN'
   mrnumber: '3719476'
+
+- number: '5'
+  author: 'Boggarapu, Pradeep and Roncal, Luz and Thangavelu, Sundaram'
+  fjournal: 'Communications on Pure and Applied Analysis'
+  pages: '2575-2605'
+  year: '2019'
+  title: 'On extension problem, trace Hardy and Hardy&#39;s inequalities for some fractional Laplacians'
+  issn: '1534-0392'
+  journal: 'Commun. Pure Appl. Anal.'
+  mrnumber: '3962190'
+  mrclass: '35A23 (26A33 35R11)'
+  volume: '18'
+
+- number: '3'
+  author: 'Bose, Arup and Gangopadhyay, Sreela and Saha, Koushik'
+  fjournal: 'Random Matrices. Theory and Applications'
+  url: 'http://dx.doi.org/10.1142/S2010326313500068'
+  pages: '1350006, 21'
+  year: '2013'
+  title: 'Convergence of a class of Toeplitz type matrices'
+  doi: '10.1142/S2010326313500068'
+  issn: '2010-3263'
+  journal: 'Random Matrices Theory Appl.'
+  mrnumber: '3109423'
+  mrclass: '60B20'
+  volume: '2'
 
 - url: 'http://dx.doi.org/10.1142/9789812818997_0008'
   mrnumber: '2477175'
