form based updates

--- a/_data/InspireDST.yaml
+++ b/_data/InspireDST.yaml
@@ -16,5 +16,5 @@
 - name: Sushma Palimar, (Ph.D., NITK, Surathkal)
   position: DST-Women Scientist (A)
   research-areas: Algebraic number theory
-  user-id : sushma16
+  user-id : psushma
   image: true
