--- a/_data/students.yaml
+++ b/_data/students.yaml
@@ -422,3 +422,21 @@
   programme: Integrated PhD
   guide: yet to decide
   scholarship: IISc
+
+- name: Divya
+  year-of-joining: 2019
+  programme: PhD
+  guide: yet to decide
+  scholarship: IISc
+
+- name: M V Ajay Kumar Nair
+  year-of-joining: 2019
+  programme: PhD
+  user-id: ajaynair
+  image: true
+
+- name: Mansimar Singh
+  year-of-joining: 2019
+  programme: Integrated PhD
+  user-id: mansimars
+  image: true
