correction to action

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -11,10 +11,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build with Jekyll
       run: |
-        apt-get update  
-        apt-get install --assume-yes ruby-full build-essential zlib1g-dev liblzma-dev git < /dev/null  
+        sudo apt-get update  
+        sudo apt-get install --assume-yes ruby-full build-essential zlib1g-dev liblzma-dev git < /dev/null  
         gem install -v "1.16.4" bundler --no-ri --no-rdoc 
         bundle update github-pages 
         bundle install --without development test 
-        gem cleanup
         bundle exec jekyll build --config _config.yml,_config-root.yml
