action with local gems

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -13,6 +13,9 @@ jobs:
       run: |
         sudo apt-get update  
         sudo apt-get install --assume-yes ruby-full build-essential zlib1g-dev liblzma-dev git < /dev/null  
+        mkdir ~/.ruby
+        export GEM_HOME=~/.ruby/
+        export PATH="$PATH:~/.ruby/bin"
         gem install -v "1.16.4" bundler --no-ri --no-rdoc 
         bundle update github-pages 
         bundle install --without development test 
