--- a/_data/nmiDist.yaml
+++ b/_data/nmiDist.yaml
@@ -8,4 +8,4 @@
 - name: Vivek S. Borkar
   research-areas: Markov decision processes, controlled diffusions, stochastic algorithms, stochastic games
   email: borkar[at]tifr.res.in
-  webpage: http://www.tcs.tifr.res.in/~borkar/
+  webpage: https://www.ee.iitb.ac.in/web/faculty/homepage/borkar
