--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -19,4 +19,15 @@ jobs:
         gem install -v "1.16.4" bundler --no-ri --no-rdoc 
         bundle update github-pages 
         bundle install --without development test 
-        bundle exec jekyll build --config _config.yml,_config-root.yml
+        bundle exec jekyll build 
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Install mill
+      run: |
+       sudo sh -c '(echo "#!/usr/bin/env sh" && curl -L https://github.com/lihaoyi/Ammonite/releases/download/1.8.1/2.13-1.8.1) > bin/amm && chmod +x bin/amm' 
+    - name: Test for broken links
+      run: bin/amm checklinks.sc
+
+
