--- a/_data/pubs.yaml
+++ b/_data/pubs.yaml
@@ -2571,6 +2571,20 @@
   mrclass: '76L05'
   volume: '75'
 
+- number: '3'
+  author: 'Seshadri, Harish'
+  fjournal: 'Indian Journal of Pure and Applied Mathematics'
+  url: 'https://doi.org/10.1007/s13226-019-0355-2'
+  pages: '795-799'
+  year: '2019'
+  title: 'Differential geometry in India'
+  doi: '10.1007/s13226-019-0355-2'
+  issn: '0019-5588'
+  journal: 'Indian J. Pure Appl. Math.'
+  mrnumber: '3995088'
+  mrclass: '53-02'
+  volume: '50'
+
 - number: '2'
   author: 'Sukavanam, N.'
   fjournal: 'Journal of Mathematical Analysis and Applications'
@@ -7109,20 +7123,17 @@
   mrclass: '90C40 (60K15)'
   volume: '31'
 
-- number: '4'
-  author: 'Gadgil, Siddhartha and Seshadri, Harish'
-  fjournal: 'The Mathematical Intelligencer'
-  url: 'http://dx.doi.org/10.1007/BF02986174'
-  pages: '34-43'
-  year: '2007'
-  mrreviewer: 'Esther Cabezas Rivas'
-  title: 'Ricci flow and the Poincar&eacute; conjecture'
-  doi: '10.1007/BF02986174'
-  issn: '0343-6993'
-  journal: 'Math. Intelligencer'
-  mrnumber: '2361622'
-  mrclass: '53C44 (57M40)'
-  volume: '29'
+- number: '35'
+  author: 'Aas, Erik and Ayyer, Arvind and Linusson, Svante and Potka, Samu'
+  fjournal: 'Journal of Physics. A. Mathematical and Theoretical'
+  pages: '355001, 19'
+  year: '2019'
+  title: 'The exact phase diagram for a semipermeable TASEP with nonlocal boundary jumps'
+  issn: '1751-8113'
+  journal: 'J. Phys. A'
+  mrnumber: '4002492'
+  mrclass: '82C22 (60K35)'
+  volume: '52'
 
 - number: '2'
   author: 'Bhattacharyya, Tirthankar and Pal, Sourav'
@@ -7426,6 +7437,35 @@
   mrnumber: '1752130'
   mrclass: '35Q53'
   volume: '13'
+
+- number: '3'
+  author: 'Bhattacharyya, Tirthankar and Rao, T. S. S. R. K.'
+  fjournal: 'Indian Journal of Pure and Applied Mathematics'
+  url: 'https://doi.org/10.1007/s13226-019-0345-4'
+  pages: '599-617'
+  year: '2019'
+  title: 'Survey of last ten years of work done in India in some selected areas of functional analysis and operator theory'
+  doi: '10.1007/s13226-019-0345-4'
+  issn: '0019-5588'
+  journal: 'Indian J. Pure Appl. Math.'
+  mrnumber: '3995078'
+  mrclass: '46-02 (47-02)'
+  volume: '50'
+
+- number: '4'
+  author: 'Gadgil, Siddhartha and Seshadri, Harish'
+  fjournal: 'The Mathematical Intelligencer'
+  url: 'http://dx.doi.org/10.1007/BF02986174'
+  pages: '34-43'
+  year: '2007'
+  mrreviewer: 'Esther Cabezas Rivas'
+  title: 'Ricci flow and the Poincar&eacute; conjecture'
+  doi: '10.1007/BF02986174'
+  issn: '0343-6993'
+  journal: 'Math. Intelligencer'
+  mrnumber: '2361622'
+  mrclass: '53C44 (57M40)'
+  volume: '29'
 
 - number: '3'
   author: 'Gadgil, Siddhartha'
@@ -10424,6 +10464,20 @@
   mrnumber: '1432534'
   mrclass: '52B60 (52A40)'
   volume: '64'
+
+- number: '2'
+  author: 'Garani, Shayan Srinivasa and Seshadri, Harish'
+  fjournal: 'Journal of Mathematics \& Music. Mathematical and Computational Approaches to Music Theory, Analysis, Composition and Performance'
+  url: 'https://doi.org/10.1080/17459737.2019.1604845'
+  pages: '107-134'
+  year: '2019'
+  title: 'An algorithmic approach to South Indian classical music'
+  doi: '10.1080/17459737.2019.1604845'
+  issn: '1745-9737'
+  journal: 'J. Math. Music'
+  mrnumber: '4008829'
+  mrclass: '00A65 (18B25 20B35)'
+  volume: '13'
 
 - number: '3'
   author: 'Gupta, Purvi'
