--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -85,6 +85,7 @@ jan2020:
     ug-prereq-courses: ''
     timing:
     venue:
+    webpage: http://math.iisc.ac.in/~gadgil/catg2020/index.html
   - name: Differentiable Manifolds & Lie Groups
     instructor: Subhojoy Gupta
     code: MA 338
