--- a/_data/postdocs.yaml
+++ b/_data/postdocs.yaml
@@ -73,7 +73,7 @@
   user-id: arunmaiti
   position: NBHM
   image: true
-  research-area: Symplectic geometry and string topology.
+  research-area: String topology.
 
 - name	:	Dipendu Maity 
   phd: IIT Patna
