--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -117,7 +117,7 @@ jan2020:
     code: MA 374
     instructor: A. K. Nandakumaran
   - name: Topics in Rigorous Statistical Mechanics
-    code: MA 39x
+    code: MA 397
     instructor: Riddhipratim Basu (ICTS)
 
 
