--- a/_data/faculty.yaml
+++ b/_data/faculty.yaml
@@ -131,6 +131,7 @@
   phd: Cambridge, UK
   office: X27
   author-name: "Kakde, Mahesh"
+  phone-ext: 2388
 
 - name: Apoorva Khare
   user-id: khare
