subhojoy course webpage

--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -107,6 +107,7 @@ jan2020:
     ug-prereq-courses: ''
     timing:
     venue:
+    webpage: https://sites.google.com/view/subhojoy/ma338
   - name: Geometric Analysis
     code: MA 339
     instructor: Vamsi Pingali
