--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -24,7 +24,7 @@ jan2020:
     code: MA 213
     prereq-courses: MA 212
     ug-prereq-courses: ''
-    timing:
+    timing: 'Tue, Thu: 2:00-3:30'
     venue: "LH-4"
   - name: Measure & Integration
     credits: '3:1'
@@ -32,7 +32,7 @@ jan2020:
     code: MA 222
     prereq-courses: MA 221
     ug-prereq-courses: ''
-    timing:
+    timing: 'Mon, Wed, Fri: 11:00-12:00'
     venue: "LH-4"
   - name: Complex Analysis
     credits: '3:1'
@@ -40,7 +40,7 @@ jan2020:
     code: MA 224
     prereq-courses: MA 221
     ug-prereq-courses: ''
-    timing:
+    timing: 'Tue, Thu: 10:00-11:30'
     venue: "LH-4"
   - name: Calculus on Manifolds
     instructor: Basudeb Datta
@@ -49,47 +49,64 @@ jan2020:
     ug-prereq-courses: ''
     timing:
     venue: "LH-4"
+    timing: 'Mon, Wed, Fri: 10:00-11:00'
   - name: Ordinary Differential Equations
     credits: '3:1'
     instructor: E. K. Narayanan
     code: MA 241
     prereq-courses: MA 221
     ug-prereq-courses: ''
-    timing:
+    timing: 'Tue, Thu: 8:30-10:00'
     venue: "LH-4"
   electives:
   - name: "Logic: classical, modal and intuitionistic"
     instructor: Kamal Lodaya
     code: MA 209
+    timing: 'Tue, Thu: 11:30-1:00'
+    venue: "LH-5"
   - name: Introduction to Dynamical Systems Theory
     instructor: Janaki Balakrishnan
     code: MA 278
+    timing: 'Tue, Thu: 11:30-1:00'
+    venue: "LH-4"
   - name: Topics in Harmonic Anaysis
     code: MA 304
     instructor: S. Thangavelu
+    timing: 'Tue, Thu: 10:00-11:30'
+    venue: "LH-2/LH-1"
   - name: Commutative Algebra
     code: MA 312
     instructor: Dilip Patil
+    timing: 'Tue, Thu: 3:30-5:00'
+    venue: "LH-5/LH-1"
   - name: Algebraic Number Theory
     code: MA 313
     instructor: Radhika Ganapathy
+    timing: 'Tue, Thu: 8:30-10:00'
+    venue: "LH-5"
   - name: Lie Algebras and their Representations
     code: MA 315
     instructor: R. Venkatesh/Apoorva Khare
+    timing: 'Tue, Thu: 11:30-1:00'
+    venue: "LH-3"
   - name: Introduction to Homological Algebra
     code: MA 316
     instructor: Safdar Quddus
+    timing: 'Tue, Thu: 11:30-1:00'
     prereq-courses: ''
+    venue: "LH-2/LH-1"
   - name: Operator Theory
     code: MA 323
     instructor: Surjit Kumar
+    timing: 'Mon, Wed, Fri: 3:00-4:00'
+    venue: "LH-5"
   - name: Algebraic Topology
     instructor: Siddhartha Gadgil
     code: MA 332
     prereq-courses: MA 232
     ug-prereq-courses: ''
-    timing:
-    venue:
+    timing: 'Mon, Wed, Fri: 9:00-10:00'
+    venue: "LH-5"
     webpage: "http://math.iisc.ac.in/~gadgil/algebraic-topology-2020/"
   - name: Computer Assisted Topology and Geometry
     instructor: Siddhartha Gadgil
@@ -97,32 +114,40 @@ jan2020:
     credits: "1:3"
     prereq-courses: 
     ug-prereq-courses: ''
-    timing:
-    venue:
+    timing: 'Tue, Thu: 9:00-10:00'
+    venue: "LH-3"
     webpage: http://math.iisc.ac.in/~gadgil/catg2020/index.html
   - name: Differentiable Manifolds & Lie Groups
     instructor: Subhojoy Gupta
     code: MA 338
     prereq-courses: ''
     ug-prereq-courses: ''
-    timing:
-    venue:
+    timing: 'Tue, Thu: 3:30-5:00'
+    venue: "LH-4"
     webpage: https://sites.google.com/view/subhojoy/ma338
   - name: Geometric Analysis
     code: MA 339
     instructor: Vamsi Pingali
+    timing: 'Tue, Thu: 2:30-3:30'
+    venue: "LH-5"
   - name: Elliptic Curves
     code: MA 353
     instructor: Mahesh Kakde
+    timing: 'Tue, Thu: 10:00-11:30'
+    venue: "LH-5"
   - name: Topics in Probability and Stochastic Processes
     code: MA 368
     instructor: Manjunath Krishnapur
+    timing: 'Mon, Wed, Fri: 10:00-11:00'
+    venue: "LH-5"
   - name: Semigroup Theory and Evolution Equations
     code: MA 374
     instructor: A. K. Nandakumaran
   - name: Topics in Rigorous Statistical Mechanics
     code: MA 397
     instructor: Riddhipratim Basu (ICTS)
+    timing: 'Tue, Thu: 3:30-5:00'
+    venue: "LH-3"
 
 
 aug2019:
