--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build with Jekyll
       run: |
-        sudo apt-get update  
+        # sudo apt-get update  
         sudo apt-get install --assume-yes ruby-full build-essential zlib1g-dev liblzma-dev git < /dev/null  
         mkdir ~/.ruby
         export GEM_HOME=~/.ruby/
