--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Test for broken links
-      run: amm checklinks.sc
+      run: ./amm checklinks.sc
 
 
