installing github pages

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -17,6 +17,7 @@ jobs:
         export GEM_HOME=~/.ruby/
         export PATH="$PATH:~/.ruby/bin"
         gem install -v "1.16.4" bundler --no-ri --no-rdoc 
+        bundle update github-pages 
         bundle install --without development test 
         bundle exec jekyll build 
     - name: Set up JDK 1.8
