--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -116,7 +116,7 @@ jan2020:
     credits: "1:3"
     prereq-courses: 
     ug-prereq-courses: ''
-    timing: 'Tue, Thu: 9:00-10:00'
+    timing: "to be finalized"
     venue: "LH-3"
     webpage: http://math.iisc.ac.in/~gadgil/catg2020/index.html
   - name: Differentiable Manifolds & Lie Groups
@@ -133,6 +133,9 @@ jan2020:
     timing: 'Tue, Thu: 2:30-3:30'
     venue: "LH-5"
     webpage: http://math.iisc.ac.in/~vamsipingali/teaching/ma339geomanalysis2019spring/339_2019.html
+  - name: Semigroup Theory and Evolution Equations
+    code: MA 351
+    instructor: A. K. Nandakumaran
   - name: Elliptic Curves
     code: MA 353
     instructor: Mahesh Kakde
@@ -144,9 +147,6 @@ jan2020:
     timing: 'Mon, Wed, Fri: 10:00-11:00'
     venue: "LH-5"
     webpage: "http://math.iisc.ac.in/~manju/MartBM/martingalesandbrownianmotion.html"
-  - name: Semigroup Theory and Evolution Equations
-    code: MA 374
-    instructor: A. K. Nandakumaran
   - name: Topics in Rigorous Statistical Mechanics
     code: MA 397
     instructor: Riddhipratim Basu (ICTS)
