--- a/_data/courses.yaml
+++ b/_data/courses.yaml
@@ -132,7 +132,7 @@ jan2020:
     instructor: Vamsi Pingali
     timing: 'Tue, Thu: 2:30-3:30'
     venue: "LH-5"
-    webpage: http://math.iisc.ac.in/~vamsipingali/teaching/ma339geomanalysis2019spring/339_2019.html
+    webpage:
   - name: Semigroup Theory and Evolution Equations
     code: MA 351
     instructor: A. K. Nandakumaran
